
* Removed default entries from getopt switch
* shuffler (euler) no longer calls make_klets(), making it faster and more
memory efficient at higher k
* shuffler version bumped to 1.2
* replaced all instances of count_klets() with count_klets2(), which does not
require a vector<string> of the actual klets to do counting
* K-lets with zero counts can be ommitted from countlets output
* countlets version bumped to 1.2
* seqgen no longer requires commas to separate alphabets made of single-char
letters
* seqgen version bumped to 1.2

2019-05-02  Benjamin Jean-Marie Tremblay  <benjmtremblay@gmail.com>

* Made -h flag mandatory to see usage

2019-04-30  Benjamin Jean-Marie Tremblay  <benjmtremblay@gmail.com>

* countwin v1.0 added

2019-04-27  Benjamin Jean-Marie Tremblay  <benjmtremblay@gmail.com>

* Added .reserve() to a few variables
* seqgen streams new letters directly to output, not keeping entire new
sequence in memory
* seqgen version bumped to v1.1
* Dropped -p option for countlets
* countlets has a new -a option, allowing to specify alphabet to prevent
loading entire sequence into memory (at the cost of speed for higher k)
* countlets version bumped to v1.1
* countfa now reads one char at a time, version bumped to v1.1

2019-04-26  Benjamin Jean-Marie Tremblay  <benjmtremblay@gmail.com>

* Added countfa v1.0
* shuffler -f now inserts newlines every 80 characters
* Streamlined shuffler internals: sequences in fasta files are loaded,
shuffled and output one at a time instead of keeping the entire file in
memory
* shuffler version bumped to v1.1

2019-04-25  Benjamin Jean-Marie Tremblay  <benjmtremblay@gmail.com>

* Added seqgen v1.0

2019-04-24  Benjamin Jean-Marie Tremblay  <benjmtremblay@gmail.com>

* countlets and shuffler are now v1.0
* New default shuffling method: euler
* The linear shuffling method can still be used with -l flag
* countlets can show progress with -p flag
* Rewrote count_klets() internals, much faster now