@@ -7,6 +7,7 @@ memory efficient at higher k
 * replaced all instances of count_klets() with count_klets2(), which does not
 require a vector<string> of the actual klets to do counting
 * K-lets with zero counts can be ommitted from countlets output
+* faster countlets counting from a stream using map<string, int>
 * countlets version bumped to 1.2
 * seqgen no longer requires commas to separate alphabets made of single-char
 letters
